css/style.css
:root {
    --primary-bg-color: #EFEEE9;
    --primary-text-color: #584F4C;
    --primary-text-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
    --primary-font-family: Montserrat, sans-serif;
    --primary-theme-color: #93368D;
    --secondary-theme-color: #4A8CA3;
    --tertiary-theme-color: #E2068C;
    --primary-border: 1px solid #AAA;
}

body {
    margin: 5rem;
    background-color: var(--primary-bg-color);
    color: var(--primary-text-color);
    text-shadow: var(--primary-text-shadow);
}

* {
    font-family: var(--primary-font-family), sans-serif;
}

#example_scatter_plot div {
    padding: 0.5em;
}

#line_plot_landen{
    display: flex;
    justify-content: center;
    align-items: center;
}

#line_plot_landen svg{
    overflow: visible;
}

#world_chart{
    display: flex;
    justify-content: center;
    align-items: center;
}

#controls{
    display: flex;
    justify-content: center;
    align-items: center;
}

.sidebar {
    display: flex;
    flex-direction: column;
    gap: 4px;
    border: 1px solid #ccc;
    border-radius: 6px;
    padding: 10px;
    min-width: 120px;
    background: #fafafa;
    float: left;
}

.tooltip {
    opacity: 1;
    transition: opacity 0.2s ease;
}

.tooltip rect {
    fill: #ffffff;
    rx: 5px;
    opacity: 0.5;
}

.tooltip text {
    fill: #000000;
    font-size: 12px;
    font-weight: bold;
}

.tooltip-group:hover .tooltip {
    opacity: 0;
}

.grid line {
    stroke: #e0e0e0;
    stroke-dasharray: 3,3;
}

.grid path {
    stroke: none;
}

.hero{
    background-image: linear-gradient(to right, var(--secondary-theme-color), var(--tertiary-theme-color));
    border: var(--primary-border);
    padding: 10px 3%;
    border-radius: 10px;
    margin-bottom: 30px;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
}

nav{
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo{
    width: 100px;
}

nav ul {
    margin: 0 auto;
}

nav ul li{
    display: inline-block;
    list-style: none;
    margin: 10px 20px;
}

nav ul li a{
    text-decoration: none;
    color: black;
    font-weight: 400;
}

.page {
    display: none;
    padding: 20px;
}

.page.active {
    display: block;
}

.sphere {
    fill: #EEEEEEEE;
}

.country:hover {
    fill: red;
}

.container {
    display: flex;
    gap: 40px;
}

.left {
    width: 55%;
}

.right {
    width: 45%;
    margin-left: 50px;
    margin-top: 80px;
}

table {
    width: 100%;
    border-collapse: collapse;
    margin-bottom: 20px;
}

td {
    border: var(--primary-border);
    padding: 6px;
}

#samenvatting tbody {
    text-align: center;
}

/* dit neemt de eerste kolom van overzicht */
#overzicht td:first-child,
#overzicht th:first-child {
    text-align: left;
    padding-left: 10px;
}

/* dit neemt de tweede kolom van overzicht */
#overzicht td:last-child,
#overzicht th:last-child {
    text-align: center;
}

#overzicht {
    border-collapse: collapse;
    table-layout: fixed;
}

#country_list {
    position: absolute;
    background: white;
    width: 200px;
}

.search-container {
    margin-bottom: 20px;
    position: relative;
}

#search_country {
    width: 250px;
    padding: 8px;
}

#lijnplot svg{
    overflow: visible;
}

#samenvatting caption{
    font-size: 20px;
    font-weight: bold;
    text-align: left;
    margin-bottom: 8px;
}

#overzicht caption {
    font-size: 20px;
    font-weight: bold;
    text-align: left;
    margin-bottom: 8px;
    white-space: nowrap;
}

.plot-container {
    background-color: #E8E7E2;
    border: var(--primary-border);
    border-radius: 4px;
    padding: 20px;
    margin-bottom: 30px;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
}

#data .plot-container {
    margin-bottom: 20px;
}

.separator-bar {
    width: 100%;
    height: 1px;
    background-color: var(--primary-theme-color);
    margin: 30px 0;
    padding: 0;
}

.year-btn {
    border: none;
    cursor: pointer;
    font-size: 10px;
    font-weight: bold;
    color: var(--primary-bg-color);
    border-radius: 8px;
    transition: background-color 0.2s, transform 0.1s, box-shadow 0.2s;
}

.year-btn.unselected {
    opacity: 0.2;
}

.year-btn.selected {
    border: 1px solid #4A90E2;
}

.year-btn:hover {
    transform: translateY(-2px);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
}

